# auv-homework

./: CMakeLists.txt  app.py  data.csv  map.html  package.xml
msg/: SensorData.msg
scripts/: img_processor.py  listener.py  talker.py
src/: listener.cpp  talker.cpp
